# football_competition

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: data_config.py  experiment_config.py  model_config.py
dataloaders/: batch_samplers.py
dataset/: emotions_dataset.py  football_dataset.py
executors/: trainer.py
models/: mlp.py
notebooks/: mlp_with_pytorch_training_notebook.ipynb
utils/: common_functions.py  enums.py  logger.py  metrics.py  preprocessing.py  visualization.py
