[project]
name = "football-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "easydict>=1.13",
  "matplotlib>=3.10.3",
  "mlflow>=1.27.0",
  "neptune>=1.14.0",
  "opencv-python>=4.11.0.86",
  "pandas>=2.2.3",
  "pillow>=11.2.1",
  "pyarrow>=20.0.0",
  "python-dotenv>=1.1.0",
  "seaborn>=0.13.2",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
