[project]
name = "football-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "easydict~=1.13",
  "jupyter>=1.1.1",
  "matplotlib~=3.10.0",
  "mlflow~=2.20.2",
  "neptune~=1.13.0",
  "numpy~=2.2.1",
  "opencv-python~=4.10.0.84",
  "pandas~=2.2.3",
  "pillow~=11.1.0",
  "pyarrow~=18.1.0",
  "python-dotenv~=1.0.1",
  "seaborn~=0.13.2",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "tqdm~=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
